<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nehvin.layouts.LinearLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toField"
        android:id="@+id/textView"
        android:hint="@string/to"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/message"
        android:id="@+id/textView2"
        android:gravity="top"
        android:hint="@string/msg"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="right"
        android:onClick="callNewScreen"
        android:id="@+id/button3" />
</LinearLayout>
